# Inscrypt

./: .gitignore  README.md  TODO.md  api_request_example.py  description.md  pnpm-lock.yaml
.github/workflows/: greetings.yml
apps/api/: main.py  package.json  pyproject.toml  requirements.txt
apps/api/app/: logging_config.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: encryption.py  hashing.py  steganography.py
apps/api/app/api/v1/schemas/: common.py
apps/api/app/core/: config.py  exceptions.py  logging.py
apps/api/app/services/encryption/: __init__.py  encryption_service.py  models.py
apps/api/app/services/hashing/: __init__.py  hashing_service.py  models.py
apps/api/app/services/steganography/audio/: __init__.py  audio_steganography_service.py  models.py
apps/api/app/services/steganography/image/: __init__.py  image_steganography_service.py  models.py
apps/api/app/services/steganography/video/: __init__.py  models.py  video_steganography_service.py
apps/api/app/utils/: __init__.py  file_handler.py
apps/api/app/v1/: models.py
apps/api/app/v1/core/: encryption.py  stenography.py
apps/api/app/v1/routes/: stenography.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/components/app/: AlgorithmSettings.tsx  AppHeader.tsx  DecryptTab.tsx  EncryptTab.tsx  FileUploader.tsx  PasswordInput.tsx  ProcessButton.tsx  ResultDisplay.tsx  SecretContentInput.tsx  SecurityStatus.tsx  SessionStats.tsx
apps/web/components/parallax/: parallax-elements.tsx
apps/web/components/sections/: cta-section.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  multilayer-section.tsx  technology-section.tsx  (+1 more)
(+1 files in other folders)
