[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pycryptodome",
    "pillow",
    "moviepy",
    "soundfile",
    "numpy",
    "python-multipart",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "httpx>=0.28.1",
    "pydub>=0.25.1",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
