[project]
name = "api"
version = "0.1.0"
description = "API for the Inscrypt project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pycryptodome",
    "pillow",
    "moviepy",
    "soundfile",
    "numpy",
    "python-multipart",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "httpx>=0.28.1",
    "rich>=14.1.0",
    "opencv-python>=4.11.0.86",
    "pydub>=0.25.1",
    "python-ffmpeg>=2.0.12",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
